services/transmute/service.yml
apiVersion: v1
kind: Service
metadata:
  name: transmute
  namespace: transmute
  labels:
    app.kubernetes.io/name: transmute
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3313
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: transmute
