services/transmute/backendtrafficpolicy.yml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: transmute
  namespace: transmute
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: transmute
  healthCheck:
    active:
      type: HTTP
      http:
        path: /api/health/ready
        expectedStatuses:
          - 200
      interval: 10s
      timeout: 5s
      unhealthyThreshold: 3
      healthyThreshold: 1
  rateLimit:
    type: Local
    local:
      rules:
        - limit:
            requests: 50
            unit: Second
