services/transmute/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transmute
  namespace: transmute
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Transmute
    gethomepage.dev/description: Convertidor/compresor de medios
    gethomepage.dev/group: Aplicaciones
    gethomepage.dev/icon: transmute.png
    gethomepage.dev/href: https://transmute.bonchan.org
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - transmute.bonchan.org
  rules:
    - backendRefs:
        - name: transmute
          port: 3313
      timeouts:
        request: 600s
        backendRequest: 600s
